updates on footer

--- a/index.html
+++ b/index.html
@@ -944,13 +944,13 @@
 
                         <div class="col-sm-4 col-xs-4">
                             <div class="copyright_text">
-                                <p class=" wow fadeInRight" data-wow-duration="1s">Bridge School of Baking and Practical Cookery<br>© 2023. All Rights Reserved</p>
+                                <p class=" wow fadeInRight" data-wow-duration="1s">Bridge School of Baking and Practical Cookery<br>© 2025. All Rights Reserved</p>
                             </div>
                         </div>
 
                         <div class="col-sm-4 col-xs-4">
                             <div class="copyright_text">
-                                <p class=" wow fadeInRight" data-wow-duration="1s">Distributed <i class="fa fa-heart"></i> by <a href="https://themewagon.com/" target="_blank">Themewagon<br></a>2016. All Rights Reserved</p>
+                                <p class=" wow fadeInRight" data-wow-duration="1s">Distributed <i class="fa fa-heart"></i> by <a href="techninjaug@gmail.com" target="_blank">TechNinja<br></a>2025. All Rights Reserved</p>
                             </div>
                         </div>
 
